changed zprofile to zshrc, added ssh config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,6 +8,7 @@
     ~/.zshrc: zshrc
     ~/.config/nvim/init.vim: init.vim
     ~/.config/starship.toml: starship.toml
+    ~/.ssh/config: sshconfig
 
 
 - shell:
